--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/WeaponsControl.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/WeaponsControl.xaml
@@ -22,23 +22,32 @@
         </Grid.ColumnDefinitions>
         <Label x:Name="lblWapens" Content="Wapens" Grid.Column="1" FontWeight="Bold" FontSize="30" Foreground="#333333" HorizontalAlignment="Center" Margin="8"></Label>
 
-        <TextBox x:Name="tbZoekWapen" Grid.Row="1"  Width="230" FontSize="15" KeyUp="TextBox_KeyUp"
+        <TextBox x:Name="tbZoekWapen" Grid.Row="1" FontSize="15" KeyUp="TextBox_KeyUp"
   materialDesign:HintAssist.Hint="Zoek wapens" materialDesign:TextFieldAssist.UnderlineBrush="#333"
-  VerticalAlignment="Bottom"/>
-        <ComboBox x:Name="cmbCategorie" Grid.Column="1" Width="230" FontSize="15" HorizontalAlignment="Center" VerticalContentAlignment="Center"
-                     materialDesign:HintAssist.Hint="" SelectionChanged="cmbCategorie_SelectionChanged"  Grid.Row="1"/>
-        <ComboBox x:Name="cmbZeldzaamheid" Grid.Column="2" Width="230" FontSize="15" HorizontalAlignment="Center" VerticalContentAlignment="Center"
-                     materialDesign:HintAssist.Hint="" SelectionChanged="cmbZeldzaamheid_SelectionChanged"  Grid.Row="1"/>
+  VerticalAlignment="Bottom" Margin="36,0,19,0"/>
+        <ComboBox x:Name="cmbCategorie" Grid.Column="1" Width="212" FontSize="15" HorizontalAlignment="Center" VerticalContentAlignment="Center" SelectionChanged="cmbCategorie_SelectionChanged"  Grid.Row="1" Style="{StaticResource MaterialDesignFloatingHintComboBox}">
+            <materialDesign:HintAssist.Hint>
+                    <StackPanel Orientation="Horizontal" Margin="-2 0 0 0">
+                        <TextBlock Foreground="Black" FontSize="14"><Run Text="Categorie"/></TextBlock>
+                    </StackPanel>
+                </materialDesign:HintAssist.Hint>
+        </ComboBox>
+        <ComboBox x:Name="cmbZeldzaamheid" Grid.Column="2" Width="212" FontSize="15" HorizontalAlignment="Center" VerticalContentAlignment="Center" SelectionChanged="cmbZeldzaamheid_SelectionChanged"  Grid.Row="1" Margin="18,0,36,0" Style="{StaticResource MaterialDesignFloatingHintComboBox}">
+            <materialDesign:HintAssist.Hint>
+                <StackPanel Orientation="Horizontal" Margin="-2 0 0 0">
+                    <TextBlock Foreground="Black" FontSize="14"><Run Text="Zeldzaamheid"/></TextBlock>
+                </StackPanel>
+            </materialDesign:HintAssist.Hint>
+        </ComboBox>
 
         <DataGrid x:Name="dbWapens" Grid.Row="2" Grid.ColumnSpan="3"  AutoGenerateColumns="False" SelectionChanged="dbWapens_SelectionChanged" HorizontalAlignment="Center" Margin="5,20,5,10">
             <DataGrid.Resources>
                 <Style TargetType="{x:Type DataGridColumnHeader}">
                     <Setter Property="Background" Value="#333" />
                     <Setter Property="FontWeight" Value="Bold" />
-                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
                     <Setter Property="Padding" Value="6"/>
-                    <Setter Property="BorderThickness" Value="0,0,2,0"></Setter>
-                    <Setter Property="BorderBrush" Value="#fff"/>
+
+
                 </Style>
             </DataGrid.Resources>
             <DataGrid.Columns>
@@ -52,9 +61,9 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <WrapPanel Orientation="Horizontal" Grid.Row="3" Grid.ColumnSpan="3" Grid.Column="0" Margin="36,10,26,10">
+        <WrapPanel Orientation="Horizontal" Grid.Row="3" Grid.ColumnSpan="3" Grid.Column="0" Margin="36,10">
 
-            <TextBox x:Name="txtNaam" Width="125" FontSize="14" Margin="0 0 10 3"   Style="{StaticResource MaterialDesignFloatingHintTextBox}">
+            <TextBox x:Name="txtNaam" Width="120" FontSize="14" Margin="0 0 10 3"   Style="{StaticResource MaterialDesignFloatingHintTextBox}">
                 <materialDesign:HintAssist.Hint>
                     <StackPanel Orientation="Horizontal" Margin="-2 0 0 0">
                         <TextBlock Foreground="Black" FontSize="14"><Run Text="Naam"/></TextBlock>
@@ -110,9 +119,9 @@
             </TextBox>
         </WrapPanel>
 
-        <Button x:Name="btnAddWeapon" Content="Voeg wapen toe" Grid.Row="4" Margin="10,10,10,20" Click="btnAddWeapon_Click"/>
-        <Button x:Name="btnChangeWeapon" Content="Wijzig wapen" Grid.Row="4" Grid.Column="1" Margin="10,10,10,20" Click="btnChangeWeapon_Click"/>
-        <Button x:Name="btnRemoveWeapon" Content="Verwijder wapen" Grid.Row="4"  Grid.Column="2" Margin="10,10,10,20" Click="btnRemoveWeapon_Click"/>
+        <Button x:Name="btnAddWeapon" Content="Voeg wapen toe" Grid.Row="4" Margin="36,10,36,20" Click="btnAddWeapon_Click"/>
+        <Button x:Name="btnChangeWeapon" Content="Wijzig wapen" Grid.Row="4" Grid.Column="1" Margin="36,10,36,20" Click="btnChangeWeapon_Click"/>
+        <Button x:Name="btnRemoveWeapon" Content="Verwijder wapen" Grid.Row="4"  Grid.Column="2" Margin="36,10,36,20" Click="btnRemoveWeapon_Click"/>
 
     </Grid>
 </UserControl>
