--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/WeaponsControl.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/WeaponsControl.xaml
@@ -40,15 +40,8 @@
             </materialDesign:HintAssist.Hint>
         </ComboBox>
 
-        <DataGrid x:Name="dbWapens" Grid.Row="2" Grid.ColumnSpan="3"  AutoGenerateColumns="False" SelectionChanged="dbWapens_SelectionChanged" HorizontalAlignment="Center" Margin="5,20,5,10">
+        <DataGrid x:Name="dbWapens" Grid.Row="2" Grid.ColumnSpan="3"  AutoGenerateColumns="False" SelectionChanged="dbWapens_SelectionChanged" HorizontalAlignment="Center" Margin="10,20,5,0">
             <DataGrid.Resources>
-                <Style TargetType="{x:Type DataGridColumnHeader}">
-                    <Setter Property="Background" Value="#333" />
-                    <Setter Property="FontWeight" Value="Bold" />
-                    <Setter Property="Padding" Value="6"/>
-
-
-                </Style>
             </DataGrid.Resources>
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Naam" Binding= "{Binding Item.Naam}" Width="165"/>
@@ -73,7 +66,7 @@
 
             <ComboBox x:Name="cmbDbCategorie" Width="111" FontSize="14" Margin="0 0 10 0"   Style="{StaticResource MaterialDesignFloatingHintComboBox}">
                 <materialDesign:HintAssist.Hint>
-                    <StackPanel Orientation="Horizontal" Margin="-2 0 0 0">
+                    <StackPanel Orientation="Horizontal" Margin="0 0 0 0">
                         <TextBlock Foreground="Black" FontSize="14"><Run Text="Categorie"/></TextBlock>
                     </StackPanel>
                 </materialDesign:HintAssist.Hint>
@@ -81,7 +74,7 @@
 
             <ComboBox x:Name="cmbDbZeldzaamheid" Width="111" FontSize="14"  Margin="0 0 10 0"  Style="{StaticResource MaterialDesignFloatingHintComboBox}">
                 <materialDesign:HintAssist.Hint>
-                    <StackPanel Orientation="Horizontal" Margin="-2 0 0 0">
+                    <StackPanel Orientation="Horizontal" Margin="0 0 0 0">
                         <TextBlock Foreground="Black" FontSize="14"><Run Text="Zeldzaamheid"/></TextBlock>
                     </StackPanel>
                 </materialDesign:HintAssist.Hint>
@@ -89,7 +82,7 @@
 
             <ComboBox x:Name="cmbDbDamageType" Width="111" FontSize="14"  Margin="0 0 10 0"  Style="{StaticResource MaterialDesignFloatingHintComboBox}">
                 <materialDesign:HintAssist.Hint>
-                    <StackPanel Orientation="Horizontal" Margin="-2 0 0 0">
+                    <StackPanel Orientation="Horizontal" Margin="0 0 0 0">
                         <TextBlock Foreground="Black" FontSize="14"><Run Text="DamageType"/></TextBlock>
                     </StackPanel>
                 </materialDesign:HintAssist.Hint>
@@ -113,7 +106,7 @@
             <TextBox x:Name="txtLight"    Width="71" FontSize="14" Margin="0 0 0 3" Style="{StaticResource MaterialDesignFloatingHintTextBox}">
                 <materialDesign:HintAssist.Hint>
                     <StackPanel Orientation="Horizontal" Margin="-2 0 0 0">
-                        <TextBlock Foreground="Black" FontSize="14"><Run Text="Magazine"/></TextBlock>
+                        <TextBlock Foreground="Black" FontSize="14"><Run Text="Light"/></TextBlock>
                     </StackPanel>
                 </materialDesign:HintAssist.Hint>
             </TextBox>
