--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/SpecialItemControl.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/SpecialItemControl.xaml
@@ -21,15 +21,35 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Label x:Name="lblItems" Content="Special Items" Grid.Column="1" FontWeight="Bold" FontSize="30" Foreground="#333333" HorizontalAlignment="Center" Margin="8"></Label>
+        
         <WrapPanel Orientation="Horizontal" Grid.Row="1" Grid.ColumnSpan="3" Grid.Column="0" Margin="148,0,0,5" >
-            <TextBox x:Name="tbZoekItem" Grid.Row="1" Width="239" Margin="0,0,30,5"  FontSize="15" KeyUp="tbZoekItem_KeyUp"
-  materialDesign:HintAssist.Hint="Zoek item" materialDesign:TextFieldAssist.UnderlineBrush="#333"
-  VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-            <ComboBox x:Name="cmbCategorie" Grid.Column="1" Width="200" Margin="10,0,10,0"  FontSize="15" HorizontalAlignment="Center" VerticalContentAlignment="Center"
-                     materialDesign:HintAssist.Hint="Kies categorie" Style="{StaticResource MaterialDesignFloatingHintComboBox}" SelectionChanged="cmbCategorie_SelectionChanged" Grid.Row="1"/>
-            <ComboBox x:Name="cmbZeldzaamheid" Grid.Column="1"  FontSize="15" Width="200" HorizontalAlignment="Center" VerticalContentAlignment="Center"
-                     materialDesign:HintAssist.Hint="Kies zeldzaamheid" Style="{StaticResource MaterialDesignFloatingHintComboBox}" SelectionChanged="cmbZeldzaamheid_SelectionChanged"  Grid.Row="1"  Margin="30,0,0,0" Grid.ColumnSpan="2"/>
+
+            <TextBox x:Name="tbZoekItem" Width="239" Margin="0,0,30,5"  FontSize="15" KeyUp="tbZoekItem_KeyUp" Style="{StaticResource MaterialDesignFloatingHintTextBox}">
+                <materialDesign:HintAssist.Hint>
+                    <StackPanel Orientation="Horizontal" Margin="0 0 0 0">
+                        <TextBlock Foreground="Black" FontSize="14"><Run Text="Zoek item"/></TextBlock>
+                    </StackPanel>
+                </materialDesign:HintAssist.Hint>
+            </TextBox>
+
+            <ComboBox x:Name="cmbCategorie" Width="200" Margin="10,0,10,0"  FontSize="15" Style="{StaticResource MaterialDesignFloatingHintComboBox}" SelectionChanged="cmbCategorie_SelectionChanged">
+                <materialDesign:HintAssist.Hint>
+                    <StackPanel Orientation="Horizontal" Margin="0 0 0 0">
+                        <TextBlock Foreground="Black" FontSize="14"><Run Text="Kies categorie"/></TextBlock>
+                    </StackPanel>
+                </materialDesign:HintAssist.Hint>
+            </ComboBox>
+
+            <ComboBox x:Name="cmbZeldzaamheid" FontSize="15" Width="200" Style="{StaticResource MaterialDesignFloatingHintComboBox}" SelectionChanged="cmbZeldzaamheid_SelectionChanged" Margin="30,0,0,0">
+                <materialDesign:HintAssist.Hint>
+                    <StackPanel Orientation="Horizontal" Margin="0 0 0 0">
+                        <TextBlock Foreground="Black" FontSize="14"><Run Text="Kies zeldzaamheid"/></TextBlock>
+                    </StackPanel>
+                </materialDesign:HintAssist.Hint>
+            </ComboBox>
+            
         </WrapPanel>
+        
         <DataGrid x:Name="dbItems" Grid.Row="2" Grid.ColumnSpan="3"  AutoGenerateColumns="False" IsReadOnly="True" SelectionChanged="dbItems_SelectionChanged"  Width="720" HorizontalAlignment="Center" Margin="10,20,5,0">
             <DataGrid.Resources>
             </DataGrid.Resources>
@@ -41,28 +61,49 @@
                 <DataGridTextColumn Binding="{Binding Boost}" Header="Boost" Width="100"/>
             </DataGrid.Columns>
         </DataGrid>
+        
         <WrapPanel Orientation="Horizontal" Grid.Row="3" Grid.ColumnSpan="3" Grid.Column="0" Margin="143,0,0,15">
-            
-            <TextBox x:Name="txtNaam"    Width="195" FontSize="14" HorizontalAlignment="Center"
-  materialDesign:HintAssist.Hint="Naam" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:TextFieldAssist.UnderlineBrush="#333" 
-  VerticalAlignment="Center" Margin="6" />
+            <TextBox x:Name="txtNaam" Width="195" FontSize="14" Margin="6" Style="{StaticResource MaterialDesignFloatingHintTextBox}">
+                <materialDesign:HintAssist.Hint>
+                    <StackPanel Orientation="Horizontal" Margin="0 0 0 0">
+                        <TextBlock Foreground="Black" FontSize="14"><Run Text="Naam"/></TextBlock>
+                    </StackPanel>
+                </materialDesign:HintAssist.Hint>
+            </TextBox>
 
-            <ComboBox x:Name="cmbDbZeldzaamheid" Width="144" FontSize="14" HorizontalAlignment="Center"
-  materialDesign:HintAssist.Hint="Zeldzaamheid" Style="{StaticResource MaterialDesignFloatingHintComboBox}"  materialDesign:TextFieldAssist.UnderlineBrush="#333" 
-  VerticalAlignment="Bottom" Margin="6"/>
+            <ComboBox x:Name="cmbDbZeldzaamheid" Width="144" FontSize="14" Style="{StaticResource MaterialDesignFloatingHintComboBox}" Margin="6,15,6,6">
+                <materialDesign:HintAssist.Hint>
+                    <StackPanel Orientation="Horizontal" Margin="0 0 0 0">
+                        <TextBlock Foreground="Black" FontSize="14"><Run Text="Zeldzaamheid"/></TextBlock>
+                    </StackPanel>
+                </materialDesign:HintAssist.Hint>
+            </ComboBox>
 
-            <ComboBox x:Name="cmbDbCategorie" Width="144" FontSize="14" HorizontalAlignment="Center"
-  materialDesign:HintAssist.Hint="Categorie" Style="{StaticResource MaterialDesignFloatingHintComboBox}"  materialDesign:TextFieldAssist.UnderlineBrush="#333" 
-  VerticalAlignment="Bottom"  Margin="6"/>
+            <ComboBox x:Name="cmbDbCategorie" Width="144" FontSize="14" Style="{StaticResource MaterialDesignFloatingHintComboBox}"  Margin="6,15,6,6">
+                <materialDesign:HintAssist.Hint>
+                    <StackPanel Orientation="Horizontal" Margin="0 0 0 0">
+                        <TextBlock Foreground="Black" FontSize="14"><Run Text="Categorie"/></TextBlock>
+                    </StackPanel>
+                </materialDesign:HintAssist.Hint>
+            </ComboBox>
 
-            <TextBox x:Name="txtDurability"    Width="94" FontSize="14" HorizontalAlignment="Center"
-  materialDesign:HintAssist.Hint="Durability"  materialDesign:TextFieldAssist.UnderlineBrush="#333"
-  VerticalAlignment="Bottom"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="6" />
+            <TextBox x:Name="txtDurability" Width="94" FontSize="14" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="6">
+                <materialDesign:HintAssist.Hint>
+                    <StackPanel Orientation="Horizontal" Margin="0 0 0 0">
+                        <TextBlock Foreground="Black" FontSize="14"><Run Text="Durability"/></TextBlock>
+                    </StackPanel>
+                </materialDesign:HintAssist.Hint>
+            </TextBox>
 
-            <TextBox x:Name="txtBoost"    Width="94" FontSize="14" HorizontalAlignment="Center"
-  materialDesign:HintAssist.Hint="Boost" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:TextFieldAssist.UnderlineBrush="#333"
-  VerticalAlignment="Bottom"  Margin="6"/>
+            <TextBox x:Name="txtBoost" Width="94" FontSize="14" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="6">
+                <materialDesign:HintAssist.Hint>
+                    <StackPanel Orientation="Horizontal" Margin="0 0 0 0">
+                        <TextBlock Foreground="Black" FontSize="14"><Run Text="Boost"/></TextBlock>
+                    </StackPanel>
+                </materialDesign:HintAssist.Hint>
+            </TextBox>
         </WrapPanel>
+        
         <WrapPanel Orientation="Horizontal" Grid.Row="4" Grid.ColumnSpan="3" Grid.Column="0" Margin="148,10,0,20">
             <Button x:Name="btnAddItem" Content="Voeg item toe" Grid.ColumnSpan="2" Width="220" Grid.Row="4" Click="btnAddItem_Click"/>
             <Button x:Name="btnChangeItem" Content="Wijzig item" Width="220" Grid.Row="4" Grid.Column="1" Margin="30,0,30,0" Click="btnChangeItem_Click"/>
