--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/CharacterCreateControl.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/CharacterCreateControl.xaml
@@ -35,7 +35,7 @@
                 MinWidth="72"
               FontSize="15"
                     Margin="12,18,0,18"
-                Foreground="Gold"
+                Foreground="White"
                     ItemsSource="{Binding LongListToTestComboVirtualization}"
                          Style="{StaticResource MaterialDesignFloatingHintComboBox}">
                 <ComboBox.ItemsPanel>
@@ -49,7 +49,7 @@
                 MinWidth="72"
               FontSize="15"
                     Margin="12,18,0,18"
-                Foreground="Gold"
+                Foreground="White"
                     ItemsSource="{Binding LongListToTestComboVirtualization}"
                          Style="{StaticResource MaterialDesignFloatingHintComboBox}">
                 <ComboBox.ItemsPanel>
@@ -63,7 +63,7 @@
                 MinWidth="72"
               FontSize="15"
                     Margin="12,18,0,18"
-                Foreground="Gold"
+                Foreground="White"
                     ItemsSource="{Binding LongListToTestComboVirtualization}"
                          Style="{StaticResource MaterialDesignFloatingHintComboBox}">
                 <ComboBox.ItemsPanel>
@@ -77,7 +77,7 @@
                 MinWidth="72"
               FontSize="15"
                     Margin="12,18,10,18"
-                Foreground="Gold"
+                Foreground="White"
                     ItemsSource="{Binding LongListToTestComboVirtualization}"
                          Style="{StaticResource MaterialDesignFloatingHintComboBox}">
                 <ComboBox.ItemsPanel>
@@ -92,7 +92,7 @@
                 MinWidth="72"
               FontSize="15"
                     Margin="12,18,10,18"
-                Foreground="Gold"
+                Foreground="White"
                     ItemsSource="{Binding LongListToTestComboVirtualization}"
                          Style="{StaticResource MaterialDesignFloatingHintComboBox}">
                 <ComboBox.ItemsPanel>
@@ -106,7 +106,7 @@
                 MinWidth="72"
               FontSize="15"
                     Margin="12,18,10,18"
-                Foreground="Gold"
+                Foreground="White"
                     ItemsSource="{Binding LongListToTestComboVirtualization}"
                          Style="{StaticResource MaterialDesignFloatingHintComboBox}">
                 <ComboBox.ItemsPanel>
@@ -122,7 +122,7 @@
                 MinWidth="72"
               FontSize="15"
                     Margin="12,43,10,43.6"
-                Foreground="Gold"
+                Foreground="White"
                     ItemsSource="{Binding LongListToTestComboVirtualization}"
                          Style="{StaticResource MaterialDesignFloatingHintComboBox}">
             <ComboBox.ItemsPanel>
