--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/CharacterControl.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/CharacterControl.xaml
@@ -26,14 +26,14 @@
     Style="{StaticResource MaterialDesignRaisedButton}"
     Content="Character aanmaken"
     Margin="10"  Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom"/>
-        <ScrollViewer  Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="15,10,15,0">
-        <DataGrid x:Name="dtgKarakters" AutoGenerateColumns="False" >
+
+        <DataGrid x:Name="dtgKarakters" AutoGenerateColumns="False" IsReadOnly="True" CanUserResizeColumns="False" CanUserAddRows="False" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="15,10,15,0">
             <DataGrid.Resources>
                 <Style TargetType="{x:Type DataGridColumnHeader}">
                     <Setter Property="Background" Value="#333" />
                     <Setter Property="FontWeight" Value="Bold" />
-                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
-                    <Setter Property="Padding" Value="6"/>
+                    <Setter Property="HorizontalContentAlignment" Value="Left"/>
+                    <Setter Property="Padding" Value="15,6,6,6"/>
                     <Setter Property="BorderThickness" Value="0,0,2,0"></Setter>
                     <Setter Property="BorderBrush" Value="#fff"/>
                 </Style>
@@ -49,7 +49,6 @@
                 <DataGridTextColumn Width="130" Header="Level" Binding="{Binding Level}"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-        </ScrollViewer>
         <Button x:Name="btnAanpassen" Click="btnAanpassen_Click"
     Style="{StaticResource MaterialDesignRaisedButton}"
     Content="Character aanpassen"
