--- a/Oef_Project_Destiny/Project_Destiny_WPF/MainWindow.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Project_Destiny_WPF.MainWindow"
+﻿<Window x:Name="mouse" x:Class="Project_Destiny_WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Project_Destiny_WPF"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1080" WindowStyle="None" AllowsTransparency="True" Loaded="Window_Loaded">
+        Title="MainWindow" Height="600" Width="1080" WindowStyle="None" AllowsTransparency="True" ResizeMode="NoResize" Loaded="Window_Loaded" MouseLeftButtonDown="mouse_MouseLeftButtonDown" >
     <Window.Resources>
         <Storyboard x:Key="OpenMenu">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[2].(RotateTransform.Angle)" Storyboard.TargetName="rectangle">
