connection added to unit testing and created unit tests for armor and specialItem

--- a/Oef_Project_Destiny/Project_Destiny_WPF/LostPasswordWindow.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/LostPasswordWindow.xaml
@@ -8,14 +8,18 @@ xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         mc:Ignorable="d"
         Title="LostPassword" Height="400" Width="600" WindowStyle="None" AllowsTransparency="True" Background="{x:Null}">
     <Grid>
-        <Rectangle RadiusY="7.895" RadiusX="7.895" Fill="#AAAAAA"/>
-        <StackPanel HorizontalAlignment="Right" Margin="5">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="83*"/>
+            <ColumnDefinition Width="117*"/>
+        </Grid.ColumnDefinitions>
+        <Rectangle RadiusY="7.895" RadiusX="7.895" Fill="#AAAAAA" Grid.ColumnSpan="2"/>
+        <StackPanel HorizontalAlignment="Right" Margin="0,5,5,5" Grid.Column="1">
             <Button x:Name="BtnLostPassAfsluiten" Background="{x:Null}" BorderBrush="{x:Null}" Click="BtnLostPassAfsluiten_Click">
                 <materialDesign:PackIcon Kind="WindowClose" Height="27" Width="27" Foreground="Black"/>
             </Button>
         </StackPanel>
 
-        <StackPanel Margin="150,1,160,1">
+        <StackPanel Margin="150,1,160,1" Grid.ColumnSpan="2">
             <Label Content="Wachtwoord vergeten?" FontWeight="Bold" Foreground="White" FontSize="25" Margin="10,20,10,20" HorizontalAlignment="Center" />
             <TextBlock Text="Ben je je wachtwoord vergeten?&#10;Recupereer het hier!" Foreground="white" TextWrapping="Wrap" TextAlignment="Center"/>
             <Separator Margin="0,5"></Separator>
