--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/CharacterControl.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/CharacterControl.xaml
@@ -21,7 +21,7 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Label Content="Character" FontSize="24" Margin="0,-10,0,9.8" HorizontalAlignment="Center" VerticalAlignment="Bottom" Foreground="AntiqueWhite" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0"/>
+        <Label Content="Characters" FontSize="24" Margin="0,-10,0,9.8" HorizontalAlignment="Center" VerticalAlignment="Bottom" Foreground="#333333" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0"/>
         <Button x:Name="btnAanmaken" Click="btnAanmaken_Click"
     Style="{StaticResource MaterialDesignRaisedButton}"
     Content="Character aanmaken"
