--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/LoggedInControl.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/LoggedInControl.xaml
@@ -7,6 +7,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Loaded="UserControl_Loaded">
     <Grid Background="{x:Null}">
-        <TextBlock x:Name ="tbWelkom" FontWeight="Bold" Text="Welkom" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="40" Padding="0,0,0,5"/>
+        <StackPanel Orientation="Vertical" VerticalAlignment="Center">
+            <TextBlock x:Name ="tbWelkom" FontWeight="Bold" Text="Welkom" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="40" Padding="0,0,0,5"/>
+            <Label x:Name="lblAccountnaam" FontWeight="Bold" Content="" HorizontalContentAlignment="Center" FontSize="40" Padding="0,0,0,2" ></Label>
+        </StackPanel>
     </Grid>
 </UserControl>
