--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/CharacterCreateControl.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/CharacterCreateControl.xaml
@@ -20,7 +20,7 @@
             <RowDefinition Height="18*"/>
             <RowDefinition Height="25*"/>
         </Grid.RowDefinitions>
-        <Label FontSize="30" Content="Character aanmaken" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="12" Foreground="#333333"/>
+        <Label  Content="Character aanmaken" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="12" FontWeight="Bold" FontSize="30" Foreground="#333333" />
         <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
