--- a/Oef_Project_Destiny/Project_Destiny_WPF/LostPasswordWindow.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/LostPasswordWindow.xaml
@@ -12,7 +12,7 @@ xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             <ColumnDefinition Width="83*"/>
             <ColumnDefinition Width="117*"/>
         </Grid.ColumnDefinitions>
-        <Rectangle RadiusY="7.895" RadiusX="7.895" Fill="#AAAAAA" Grid.ColumnSpan="2"/>
+        <Rectangle RadiusY="7.895" RadiusX="7.895" Fill="#FF6C6C6C" Grid.ColumnSpan="2"/>
         <StackPanel HorizontalAlignment="Right" Margin="0,5,5,5" Grid.Column="1">
             <Button x:Name="BtnLostPassAfsluiten" Background="{x:Null}" BorderBrush="{x:Null}" Click="BtnLostPassAfsluiten_Click">
                 <materialDesign:PackIcon Kind="WindowClose" Height="27" Width="27" Foreground="Black"/>
