--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/AccountControl.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/AccountControl.xaml
@@ -29,7 +29,10 @@
             <Label x:Name="lblProfielnaam" Content="Profielnaam:" FontWeight="Bold" Margin="8,15,8,13" FontSize="15" Foreground="#333333" ></Label>
             <Label x:Name="lblWachtwoord" Content="Wachtwoord:" FontWeight="Bold" FontSize="15" Foreground="#333333" Margin="8,0,8,10"></Label>
             <Label x:Name="lblHerhaalWachtwoord" Content="HerhaalWachtwoord:" FontWeight="Bold" FontSize="15" Foreground="#333333" Margin="8,0,8,13"></Label>
-            <Button x:Name="btnWijzigen" Content="Gegevens wijzigen" Margin="8,5.5" Width="165" Click="btnWijzigen_Click"></Button>
+            <Grid>
+                <Button x:Name="btnWijzigen" Content="Gegevens wijzigen" Margin="8,5" Width="165" Click="btnWijzigen_Click"></Button>
+                <Button x:Name="btnAnnuleren" Content="Annuleren" Margin="8,5" Width="165" Click="btnAnnuleren_Click"></Button>
+            </Grid>
         </WrapPanel>
         <Grid Grid.Column="1" Grid.RowSpan="2" Grid.Row="2">
             <GridSplitter  Width="3" IsEnabled="True" Margin="0,10,0,33" BorderBrush="#333" BorderThickness="3" VerticalAlignment="Top" Height="280"></GridSplitter>
